add_library(${PROJECT_NAME} SHARED
    festlib.cpp
    enkeltoppforing.cpp
    legemiddel.cpp
    administrering_legemiddel.cpp
    legemiddelmerkevare.cpp
    preparatomtaleavsnitt.cpp
    pakningbyttegruppe.cpp
    sortertvirkestoffmedstyrke.cpp
    refusjon.cpp
    produktinfo.cpp
    cv.cpp
    produktinfo.cpp
    reseptgyldighet.cpp
    cs.cpp)
